// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack aligns items 1`] = `
<div
  className="itemsEnd stack"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Stack justifies content 1`] = `
<div
  className="justifyAround stack"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Stack renders 1`] = `
<div
  className="stack"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Stack renders with specified gap 1`] = `
<div
  className="stack verticalGap4"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
